# Opale

./: .gitignore  CMakeLists.txt  C_naming.md  Doxyfile  Kconfig  Kconfig.sysbuild  README.md  iis2dlpc_reg.c  iis2dlpc_reg.h  meas.csv  prj.conf  readme.md  readme.rst  sample.yaml  sysbuild.cmake  todo.rst
.github/workflows/: c-cpp.yml
Project Example/ATSAMD21G18A/mcp23x08_io_expander_SAMD21/mcp23x08_io_expander_SAMD21/: Debug.xml  driver_init.c  main.c  mcp23008_io_expander_SAMD21.cproj
Project Example/STM32L434KCU6/Core/Src/: main.c
Project Example/STM32L434KCU6/Core/mcp23008_driver/: mcp23008_driver.c  mcp23008_driver_basic.h  mcp23008_driver_interface.c
Project Example/STM32L434KCU6/Debug/: makefile  mcp23008_io_expander_L432KCU6.map  objects.list  sources.mk
application/: application.rst
application/include/devices/: eeprom.h  rgb.h  rocket.h  servo.h
application/include/drivers/: MS5611.h  bno055.h  teseo.h
application/include/drivers/teseo/: NMEA_parser.h  gnss1a1_conf.h  gnss1a1_gnss.h  gnss_data.h  gnss_datalog.h  gnss_geofence.h  gnss_lib_config.h  teseo_gnss_structs.h  teseo_liv3f_queue.h  teseo_struct.h
application/include/init/: init.h  init.hpp
application/include/peripherals/: gpio.h  saadc.h
application/include/threads/: controller.h  logger.h  measure.h  safety.h  threads.h
application/include/threads/controllerFunction/: PID.h
application/src/: config.h  main.c  main.cpp
application/src/devices/: accelerometer.c  accelerometer.h  barometer.c  barometer.cpp  barometer.h  devices.rst  eeprom.c  eeprom.h  expander.c  expander.h  gpio.c  gpio.h  gps.c  gps.cpp  gps.h  imu.c  imu.h  rgb.c  rgb.h  rocket.c  rocket.h  saadc.c  saadc.h  servo.c  servo.h
application/src/devices/eeprom/: eeprom.cpp  eeprom.h
application/src/devices/rgb/: rgb.c  rgb.cpp  rgb.h
application/src/devices/rocket/: rocket.c  rocket.cpp  rocket.h
application/src/devices/servo/: servo.c  servo.cpp  servo.h
application/src/drivers/: drivers.rst
application/src/drivers/MS5611/: MS5611.cpp  MS5611.h
application/src/drivers/bno055/: README.md  bno055.c  bno055.cpp  bno055.h  bno055_support.c  bno055_support.cpp  imu.c  imu.cpp  imu.h
application/src/drivers/ii2sdlpc/: README.md  Release_Notes.html
application/src/drivers/iis2dlpc/: CONTRIBUTING.md  README.md  Release_Notes.html  Release_Notes.md  accelerometer.c  accelerometer.cpp  accelerometer.h  iis2dlpc_reg.cpp  iis2dlpc_reg.h
application/src/drivers/mcp23008/: README.md  mcp23008.c  mcp23008.cpp  mcp23008.h  mcp23008_driver.cpp  mcp23008_driver_basic.cpp  mcp23008_driver_interface.cpp  mcp23008_driver_interface.h
application/src/drivers/ms5611/: MS5611.cpp  README.md
application/src/drivers/teseo/: TESEO_todo.rst  notes.rst  teseo.c  teseo.cpp  teseo.h  teseo_liv3f_conf.h
application/src/init/: init.c  init.cpp  init.h  init.rst
application/src/peripherals/: peripherals.rst
application/src/peripherals/gpio/: gpio.c  gpio.cpp  gpio.h
application/src/peripherals/saadc/: saadc.c  saadc.cpp  saadc.h
application/src/threads/controller/: controller.cpp
application/src/threads/logger/: logger.cpp
application/src/threads/measure/: measure.cpp
application/src/threads/safety/: safety.cpp
boards/arm/opale/: Kconfig.board  Kconfig.defconfig  board.cmake  opale-cpuapp_partitioning.dtsi  opale_cpuapp.dts  opale_cpuapp.yml  opale_cpuapp_defconfig  opale_cpuapp_ns.dts  opale_cpuapp_ns.yml  opale_cpuapp_ns_defconfig  opale_cpunet.dts  opale_cpunet.yml  opale_cpunet_defconfig
boards/boards/unistra/topaze/: Kconfig.defconfig  topaze-pinctrl.dtsi  topaze_nrf5340_cpuapp.dts  topaze_nrf5340_cpuapp_defconfig  topaze_nrf5340_cpuapp_ns.dts  topaze_nrf5340_cpuapp_ns.yml  topaze_nrf5340_cpuapp_ns_defconfig  topaze_nrf5340_cpunet.dts
boards/topaze/: Kconfig.defconfig  Kconfig.topaze  board.cmake  board.yml  topaze_nrf5340_cpuapp.dts  topaze_nrf5340_cpuapp.yml  topaze_nrf5340_cpuapp_defconfig  topaze_nrf5340_cpuapp_ns.dts  topaze_nrf5340_cpuapp_ns.yml  topaze_nrf5340_cpuapp_ns_defconfig  topaze_nrf5340_cpunet.dts  topaze_nrf5340_cpunet.yml  topaze_nrf5340_cpunet_defconfig
boards/topaze/DTSI/: topaze-I2C.dtsi  topaze-SPI.dtsi  topaze-aliases.dtsi  topaze-gpio.dtsi  topaze-inputs.dtsi  topaze-interrupts.dtsi  topaze-leds.dtsi  topaze-outputs.dtsi  topaze-pinctrl.dtsi  topaze-pwm-buzzer.dtsi  topaze-pwm-parachute.dtsi  topaze-pwm-rgb.dtsi  topaze-pwm-servo.dtsi  topaze-saadc.dtsi  topaze-serial-debug.dtsi  topaze-serial-gps.dtsi  topaze-serial-imu.dtsi  topaze-serial.dtsi  topaze-usb.dtsi
boards/topaze/defconfig/peripherals/: topaze_gpio_defconfig  topaze_pwm_defconfig  topaze_serial_defconfig
boards/topaze/defconfig/tools/: topaze_log_defconfig  topaze_segger_defconfig  topaze_threadanalyzer_defconfig
boards/topaze/dts/bindings/: pwm-buzzer.yaml  pwm-rgb.yaml  pwm-servo.yaml  pwm-wings.yaml
boards/topaze/kconfig/: topaze_includes_defconfig
boards/topaze/kconfig/core/: topaze_arm_defconfig
boards/topaze/kconfig/peripherals/: topaze_leds_defconfig
boards/topaze/kconfig/tools/: topaze_console_defconfig
conf/: APP_only.json  readme.md
core/app/: readme.md
core/app/src/: config.h  main.c
core/app/src/devices/: BNO055.c  BNO055.h  II2SDLPC.c  II2SDLPC.h  LIV3R.c  LIV3R.h  M95256.c  M95256.h  MS5611.c  MS5611.h
core/app/src/peripherals/: adc.c  adc.h  gpio.c  gpio.h  i2c.c  i2c.h  pwm.c  pwm.h  spi.c  spi.h  (+2 more)
core/net/: readme.md
core/net/src/: main.c
core_app/src/: main.c
core_net/src/: main.c
coredump/: coredump.gdb
documentation/: build.rst  debug.rst  devicetree.rst
documentation/excel/: Te_calc.xlsx
documentation/html/: doxygen_crawl.html  index.html  navtreedata.js  navtreeindex0.js  pages.html
documentation/html/search/: pages_0.js  searchdata.js
documentation/latex/: refman.tex
documentation/rst/: build.rst  software.rst
mcp23008 Driver/mcp23008 driver/: main.c  mcp23x08 driver.cbp  mcp23x08 driver.depend  mcp23x08 driver.layout
network/src/: main.c
remote/: CMakeLists.txt
src/: main.c
tests/: Tests_HW.md
tools/: adc-serial.py  meas2.csv  meas3.csv
(+92 files in other folders)
